# ai-interview

./: .gitignore  index.html  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: frontend-node-compat.yml  release.yml  rust-check.yml
ai-nterview-desktop-main/: .gitignore  AGENTS.md  Makefile  README.md  package-lock.json  package.json  vite.config.ts
ai-nterview-desktop-main/.github/workflows/: frontend-node-compat.yml  rust-check.yml
ai-nterview-desktop-main/docs/: auto-updates.md
ai-nterview-desktop-main/src/: App.tsx
ai-nterview-desktop-main/src-tauri/: Cargo.toml  tauri.conf.json
ai-nterview-desktop-main/src-tauri/src/: app_updates.rs  secret_store.rs  stt_runtime.rs  system_audio.rs  vosk_installer.rs  vosk_runtime.rs
ai-nterview-desktop-main/src/hooks/: useGlobalShortcuts.ts  useReadinessMonitor.ts
ai-nterview-desktop-main/src/lib/: historyRetention.ts  languages.ts  llm.ts  readiness.ts  tauri.ts
scripts/: build-tauri-win.cmd
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  capture_protection.rs  commands.rs  install_control.rs  lib.rs  license.rs  ocr.rs  stt.rs  stt_runtime.rs
src-tauri/updater/: publickey.pem
src/hooks/: useApiKeyValidation.ts
src/lib/: hotkeys.ts  persistStorage.ts  proxy.ts  runtimeVersion.ts  types.ts
src/pages/: Dashboard.tsx  HistoryPage.tsx  InterviewOverlay.tsx  SettingsPage.tsx
src/stores/: app.ts  history.ts  settings.ts
(+12 files in other folders)
