[package]
name = "ai-interview"
version = "0.1.1"
description = "AI Interview Desktop Assistant"
authors = ["AI Interview Team"]
license = "MIT"
edition = "2021"
rust-version = "1.93.0"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-updater = "2"
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
cpal = "0.17"
tauri-plugin-global-shortcut = "2"
vosk = "0.3.1"
reqwest = { version = "0.13", features = ["stream", "json"] }
futures-util = "0.3"
bytes = "1"
zip = "2.2"
libloading = "0.8"
base64 = "0.22"
keyring = "3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWindow"] }
objc2-foundation = "0.3"
